--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,15 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.firstExample {
+  display: flex;
+  overflow: hidden;
+}
+
+.firstExample span {
+  display: block;
+  font-size: 5rem;
+  color: red;
+  font-weight: 800;
+}
